Mobile layout bug fixe

--- a/css/_base.css
+++ b/css/_base.css
@@ -51,3 +51,8 @@ video {
 /* ====================================
 // Base Rules
 // ==================================== */
+
+.center {
+  display: flex;
+  justify-content: center;
+}
