--- a/css/modules/_menu.css
+++ b/css/modules/_menu.css
@@ -44,3 +44,10 @@
     width: 100%;
   }
 }
+
+@media (max-width: 550px) {
+  .receipe h3 {
+    font-size: 14px;
+    max-width: 35vw;
+  }
+}
